--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - restore_cache:
+          key: vulnerability-db
       - run:
           name: Build image
           command: docker build -t trivy-ci-test:latest .
@@ -16,7 +18,11 @@ jobs:
             mv trivy /usr/local/bin
       - run:
           name: Scan the local image with trivy
-          command: trivy --exit-code 1 trivy-ci-test:latest
+          command: trivy trivy-ci-test:latest
+      - save_cache:
+          key: vulnerability-db
+          paths:
+            - /root/.cache/trivy
 workflows:
   version: 2
   release:
