--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - wget https://github.com/knqyf263/trivy/releases/download/v0.0.3/trivy_0.0.3_Linux-64bit.tar.gz
   - tar zxvf trivy_0.0.3_Linux-64bit.tar.gz
 script:
-  - ./trivy --exit-code 1 trivy-ci-test:latest
+  - ./trivy --debug --exit-code 0 trivy-ci-test:latest
 cache:
   directories:
     - /root/.cache/trivy/
