--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,12 @@ jobs:
       - run:
           name: Install trivy
           command: |
-            wget https://github.com/knqyf263/trivy/releases/download/v0.0.2/trivy_0.0.2_Linux-64bit.tar.gz
-            tar zxvf trivy_0.0.2_Linux-64bit.tar.gz
+            wget https://github.com/knqyf263/trivy/releases/download/v0.0.4/trivy_0.0.4_Linux-64bit.tar.gz
+            tar zxvf trivy_0.0.4_Linux-64bit.tar.gz
             mv trivy /usr/local/bin
       - run:
           name: Scan the local image with trivy
-          command: trivy trivy-ci-test:latest
+          command: trivy --exit-code 0 --quiet trivy-ci-test:latest
       - save_cache:
           key: vulnerability-db
           paths:
