--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   - wget https://github.com/knqyf263/trivy/releases/download/v0.0.4/trivy_0.0.4_Linux-64bit.tar.gz
   - tar zxvf trivy_0.0.4_Linux-64bit.tar.gz
 script:
-  - ./trivy --exit-code 0 --quiet trivy-ci-test:latest
+  - ./trivy --exit-code 0 --severity HIGH --quiet trivy-ci-test:latest
+  - ./trivy --exit-code 1 --severity CRITICAL --quiet trivy-ci-test:latest
 cache:
   directories:
     - $HOME/.cache/trivy
