--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ env:
 
 before_install:
   - docker build -t trivy-ci-test:${COMMIT} .
-  - wget https://github.com/knqyf263/trivy/releases/download/v0.0.13/trivy_0.0.13_Linux-64bit.tar.gz
-  - tar zxvf trivy_0.0.13_Linux-64bit.tar.gz
+  - export VERSION=$(curl --silent "https://api.github.com/repos/knqyf263/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+  - wget https://github.com/knqyf263/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
+  - tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
 script:
   - ./trivy --exit-code 0 --severity HIGH --quiet trivy-ci-test:${COMMIT}
   - ./trivy --exit-code 1 --severity CRITICAL --quiet trivy-ci-test:${COMMIT}
