--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,31 +5,24 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - restore_cache:
-          key: vulnerability-db
       - run:
           name: Build image
           command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
       - run:
           name: Install trivy
           command: |
-            apk add --update curl
+            apk add --update-cache --upgrade --update curl
             VERSION=$(
-                curl --silent "https://api.github.com/repos/knqyf263/trivy/releases/latest" | \
+                curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | \
                 grep '"tag_name":' | \
                 sed -E 's/.*"v([^"]+)".*/\1/'
             )
-
-            wget https://github.com/knqyf263/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
+            wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
             tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
             mv trivy /usr/local/bin
       - run:
-          name: Scan the local image with trivy
-          command: trivy --exit-code 0 --quiet --auto-refresh trivy-ci-test:${CIRCLE_SHA1}
-      - save_cache:
-          key: vulnerability-db
-          paths:
-            - $HOME/.cache/trivy
+          name: Scan the local image with trivy (light)
+          command: trivy --exit-code 0 --no-progress trivy-ci-test:${CIRCLE_SHA1}
 workflows:
   version: 2
   release:
