--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -5,6 +5,7 @@ jobs:
     name: Scan
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
     - name: Build
       run: docker build -t trivy-ci-test:1.2.3
     - name: Scan
