--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      run: docker build -t trivy-ci-test:1.2.3
+      run: docker build -t trivy-ci-test:1.2.3 .
     - name: Scan
       uses: docker://aquasec/trivy
       with:
