--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,7 @@ jobs:
           name: Install trivy
           command: |
             apk add --update-cache --upgrade --update curl
-            VERSION=$(
-                curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | \
-                grep '"tag_name":' | \
-                sed -E 's/.*"v([^"]+)".*/\1/'
-            )
-            wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
-            tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
-            mv trivy /usr/local/bin
+            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin
       - run:
           name: Scan the local image with trivy (light)
           command: trivy --exit-code 0 --no-progress trivy-ci-test:${CIRCLE_SHA1}
